2002-04-25  Craig Rodrigues  <rodrigc@gcc.gnu.org>

	PR c/5226
	* invoke.texi (-mthreads): Remove from documented RS/6000 options.
	(-pthread) Add to RS/6000 options.  Clarify menmonics option.

2002-04-15  Andreas Schwab  <schwab@suse.de>

	* gcc.c (validate_all_switches): Also handle `%W{...}'.

2002-04-09  Alan Modra  <amodra@bigpond.net.au>

	* configure.in (auto-build.h): Use target_alias and build_alias
	when running configure.
	(gcc_cv_as_bfd_srcdir): Define.
	(gcc_cv_as): Use gcc_cv_as_bfd_srcdir to find gas version. Use
	$target_alias in directory searchs rather than $target.  Heed
	program_prefix and program_transform_name.  Search for gas in
	cross-compiler case too.  "test -x" rather than "test -f".
	(gcc_cv_nm): Set for cross compilers too.
	(gcc_cv_objdump): Define and use.
	(as_ver): Cope with date string in as --version output.
	* configure: Regenerate.

2002-04-04  Richard Henderson  <rth@redhat.com>

	PR opt/6165
	* alias.c (true_dependence): Force (mem:blk (scratch)) to conflict.
	(write_dependence_p): Likewise.

2002-04-04  David S. Miller  <davem@redhat.com>

	* calls.c (store_one_arg): If ECF_SIBCALL, use tail_call_reg.

2002-03-24  Neil Booth  <neil@daikokuya.demon.co.uk>

	preprocessor/3951
	* gcc.c (cpp_options): Pass -MD through as -MD not -M -MF.	
	* cppinit.c (cpp_handle_option): Set no_ouput if -MD or -MMD.
	(init_dependency_output): Don't make no_output decision here.

2002-03-12  Bob Wilson  <bob.wilson@acm.org>

	* config/xtensa/t-xtensa (CRTSTUFF_T_CFLAGS_S): Define.

2002-03-12  Andreas Jaeger  <aj@suse.de>

	* config/alpha/alpha.c: Merge from mainline:
	2001-07-25  Richard Henderson  <rth@redhat.com>
	* config/alpha/alpha.c (alpha_emit_conditional_move): Always swap
	GE/GT if it is an fp comparison.

2002-03-11  Neil Booth  <neil@daikokuya.demon.co.uk>

	preprocessor/3951
	* cppinit.c (init_dependency_output): Take deps output file
	from -o if none given with -MF.  Suppress normal output.